mailnews/mime/src/mimetpfl.cpp
@@ -318,9 +318,18 @@ MimeInlineTextPlainFlowed_parse_line (const char *aLine, int32_t length, MimeObj
           signature separator, gets special handling
           (RFC 3676) */
     {
-      length--;
+      length = index;
       line[index] = '\0';
     }
+  }
+
+  if (obj->options &&
+      obj->options->decompose_file_p &&
+      obj->options->decompose_file_output_fn)
+  {
+    return obj->options->decompose_file_output_fn(line,
+                                                  length,
+                                                  obj->options->stream_closure);
   }
 
   mozITXTToHTMLConv *conv = GetTextConverter(obj->options);
